--- a/src/Views/RemoveWorktree.axaml
+++ b/src/Views/RemoveWorktree.axaml
@@ -19,7 +19,7 @@
         <Path Grid.Column="0" Width="12" Height="12" Data="{StaticResource Icons.Worktree}"/>
         <TextBlock Grid.Column="1" Classes="primary" Margin="8,0,0,0" TextTrimming="CharacterEllipsis">
           <Run Text="{Binding Target.Name}"/>
-          (<Run Text="{Binding Target.RelativePath}" Foreground="{DynamicResource Brush.FG2}"/>)
+          <Run Text="{Binding Target.RelativePath}" Foreground="{DynamicResource Brush.FG2}"/>
         </TextBlock>
       </Grid>
 
