--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -373,7 +373,7 @@
                   <Path Grid.Column="0" Width="10" Height="10" Margin="8,0,0,0" Data="{StaticResource Icons.Worktree}"/>
                   <TextBlock Grid.Column="1" Classes="primary" Margin="8,0,0,0" TextTrimming="CharacterEllipsis">
                     <Run Text="{Binding Name}"/>
-                    (<Run Text="{Binding RelativePath}" Foreground="{DynamicResource Brush.FG2}"/>)
+                    <Run Text="{Binding RelativePath}" Foreground="{DynamicResource Brush.FG2}"/>
                   </TextBlock>
                   <Path Grid.Column="2" Width="10" Height="10" Margin="4,0,0,0" Data="{StaticResource Icons.Lock}" Fill="{DynamicResource Brush.FG2}" IsVisible="{Binding IsLocked}"/>
                 </Grid>
