--- a/src/Views/Push.axaml
+++ b/src/Views/Push.axaml
@@ -63,35 +63,29 @@
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.Push.To}"/>
-      <ComboBox Grid.Row="2" Grid.Column="1"
-                Height="28" Padding="8,0"
-                VerticalAlignment="Center" HorizontalAlignment="Stretch"
-                ItemsSource="{Binding RemoteBranches}"
-                IsTextSearchEnabled="True"
-                SelectedItem="{Binding SelectedRemoteBranch, Mode=TwoWay}">
-        <ComboBox.ItemTemplate>
-          <DataTemplate x:DataType="{x:Type m:Branch}">
-            <StackPanel Orientation="Horizontal" Height="20" VerticalAlignment="Center">
-              <Path Margin="0,0,8,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Branch}"/>
-              <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
-              <Border Height="14"
-                      CornerRadius="7"
-                      Margin="4,0,0,0" Padding="6,0" 
-                      VerticalAlignment="Center" 
-                      Background="Green"
-                      IsVisible="{Binding Head, Converter={x:Static StringConverters.IsNullOrEmpty}}">
-                <TextBlock Text="NEW" FontSize="9" FontFamily="{DynamicResource Fonts.Monospace}" Foreground="White" VerticalAlignment="Center"/>
-              </Border>
-            </StackPanel>
-          </DataTemplate>
-        </ComboBox.ItemTemplate>
-
-        <ComboBox.ItemContainerTheme>
-          <ControlTheme TargetType="ComboBoxItem" x:DataType="m:Branch" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
-            <Setter Property="TextSearch.Text" Value="{Binding Name}"/>
-          </ControlTheme>
-        </ComboBox.ItemContainerTheme>
-      </ComboBox>
+      <TextBox Grid.Row="2" Grid.Column="1"
+               Height="28" Padding="8,0"
+               CornerRadius="3"
+               Text="{Binding SelectedRemoteBranchName, Mode=TwoWay}">
+        <TextBox.InnerLeftContent>
+          <Path Margin="8,0,0,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Branch}"/>
+        </TextBox.InnerLeftContent>
+        <TextBox.InnerRightContent>
+          <Border Height="14"
+                  Margin="0,0,8,0"
+                  CornerRadius="7"
+                  Padding="6,0"
+                  VerticalAlignment="Center"
+                  Background="Green"
+                  IsVisible="{Binding SelectedRemoteBranch.Head, Converter={x:Static StringConverters.IsNullOrEmpty}}">
+            <TextBlock Text="NEW"
+                       FontSize="9"
+                       FontFamily="{DynamicResource Fonts.Monospace}"
+                       Foreground="White"
+                       VerticalAlignment="Center"/>
+          </Border>
+        </TextBox.InnerRightContent>
+      </TextBox>
 
       <CheckBox Grid.Row="3" Grid.Column="1"
                 Height="32"
