ux: use bold font weight for current branch name (#997)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/BranchTree.axaml
+++ b/src/Views/BranchTree.axaml
@@ -65,6 +65,7 @@
               <TextBlock Grid.Column="1"
                          Classes="primary"
                          Text="{Binding Name}"
+                         FontWeight="{Binding IsCurrent, Converter={x:Static c:BoolConverters.IsBoldToFontWeight}}"
                          TextTrimming="CharacterEllipsis"/>
             </Grid>
             
