--- a/src/Views/CreateTag.axaml
+++ b/src/Views/CreateTag.axaml
@@ -84,7 +84,7 @@
 
       <CheckBox Grid.Row="5" Grid.Column="1"
                 Content="{DynamicResource Text.CreateTag.PushToAllRemotes}"
-                IsChecked="{Binding PushToAllRemotes, Mode=TwoWay}"/>
+                IsChecked="{Binding PushToRemotes, Mode=TwoWay}"/>
     </Grid>
   </StackPanel>
 </UserControl>
