--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -36,6 +36,20 @@
           <StackPanel Grid.Column="3" Margin="8,0,0,0" Orientation="Horizontal" VerticalAlignment="Center">
             <Button Classes="icon_button"
                     Width="28"
+                    Click="OnGotoFirstChange"
+                    IsVisible="{Binding IsTextDiff}"
+                    ToolTip.Tip="{DynamicResource Text.Diff.First}">
+              <Button.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                  <Binding Path="IsTextDiff"/>
+                  <Binding Source="{x:Static vm:Preferences.Instance}" Path="UseBlockNavigationInDiffView" Mode="OneWay"/>
+                </MultiBinding>
+              </Button.IsVisible>
+              <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Top}"/>
+            </Button>
+            
+            <Button Classes="icon_button"
+                    Width="28"
                     Click="OnGotoPrevChange"
                     IsVisible="{Binding IsTextDiff}"
                     ToolTip.Tip="{DynamicResource Text.Diff.Prev}">
@@ -61,6 +75,20 @@
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Down}"/>
             </Button>
             
+            <Button Classes="icon_button"
+                    Width="28"
+                    Click="OnGotoLastChange"
+                    IsVisible="{Binding IsTextDiff}"
+                    ToolTip.Tip="{DynamicResource Text.Diff.Last}">
+              <Button.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                  <Binding Path="IsTextDiff"/>
+                  <Binding Source="{x:Static vm:Preferences.Instance}" Path="UseBlockNavigationInDiffView" Mode="OneWay"/>
+                </MultiBinding>
+              </Button.IsVisible>
+              <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Bottom}"/>
+            </Button>
+
             <ToggleButton Classes="line_path"
                           Width="28"
                           IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseBlockNavigationInDiffView, Mode=TwoWay}"
