--- a/src/Views/BranchCompare.axaml
+++ b/src/Views/BranchCompare.axaml
@@ -134,6 +134,7 @@
             <v:ChangeCollectionView ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeViewMode}"
                                     Changes="{Binding VisibleChanges}"
                                     SelectedChanges="{Binding SelectedChanges, Mode=TwoWay}"
+                                    AutoSelectFirstChange="True"
                                     ContextRequested="OnChangeContextRequested"/>
           </Border>
         </Grid>
