--- a/src/Views/CommitChanges.axaml
+++ b/src/Views/CommitChanges.axaml
@@ -49,6 +49,7 @@
                                 ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeViewMode}"
                                 Changes="{Binding VisibleChanges}"
                                 SelectedChanges="{Binding SelectedChanges, Mode=TwoWay}"
+                                AutoSelectFirstChange="True"
                                 ContextRequested="OnChangeContextRequested"/>
       </Border>
     </Grid>
